--- a/demo/yata/todos/templates/todos/index.html
+++ b/demo/yata/todos/templates/todos/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <html lang="en">
 
 <head>
@@ -5,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Things to do</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.11"
+        integrity="sha384-0gxUXCCR8yv9FM2b+U3FDbsKthCI66oH5IA9fHppQq9DDMHuMauqq1ZHBpJxQ0J0"
+        crossorigin="anonymous"></script>
+    <script src="{% static 'todos/utils.js' %}"></script>
 
 </head>
 
@@ -15,11 +21,28 @@
         </h1>
 
 
-        <div class="text-center text-2xl font-bold text-transparent/30 pt-6">
+        <div id="todo_items" />
+
+        <div class="text-center text-2xl font-bold text-transparent/30 pt-6" id="todo_items_empty">
             Nothing to see here...
         </div>
 
 
+        <div class="absolute inset-x-0 bottom-2 flex justify-center">
+            <div>
+
+                <h2
+                    class="text-xl font-bold leading-7 text-gray-800 sm:truncate sm:text-2xl sm:tracking-tight text-center">
+                    Add Item</h2>
+
+                <form hx-post="{% url 'action_add_new_todo' %}" hx-target="#todo_items" hx-swap="beforeend">
+                    {% csrf_token %}
+                    {{ form }}
+                    <input type="submit" value="Add"
+                        class="rounded bg-green-600 px-2 py-1 text-xs font-semibold text-white shadow-sm hover:bg-green-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-green-600">
+                </form>
+            </div>
+        </div>
     </div>
 </body>
 
