--- a/demo/yata/todos/templates/todos/index.html
+++ b/demo/yata/todos/templates/todos/index.html
@@ -14,14 +14,20 @@
 
 </head>
 
-<body>
+<body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
     <div class="mx-auto max-w-7xl sm:px-6 lg:px-8 space-y-4 pt-4">
 
         <h1 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight">Things to do
         </h1>
 
 
-        <div id="todo_items" />
+        <div id="todo_items" class="space-y-2" data-testid="todo_items">
+            {% for item in todo_items %}
+
+            {% include "todos/partial_todo_item.html" %}
+
+            {% endfor %}
+        </div>
 
         <div class="text-center text-2xl font-bold text-transparent/30 pt-6" id="todo_items_empty">
             Nothing to see here...
@@ -36,7 +42,7 @@
                     Add Item</h2>
 
                 <form hx-post="{% url 'action_add_new_todo' %}" hx-target="#todo_items" hx-swap="beforeend">
-                    {% csrf_token %}
+
                     {{ form }}
                     <input type="submit" value="Add"
                         class="rounded bg-green-600 px-2 py-1 text-xs font-semibold text-white shadow-sm hover:bg-green-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-green-600">
