--- a/demo/yata/todos/templates/todos/partial_todo_item.html
+++ b/demo/yata/todos/templates/todos/partial_todo_item.html
@@ -1,7 +1,21 @@
-<div class="todo_item">
-    <input type="checkbox" />
-    {{ item.title }}
-    <button>
+<div class="todo_item border-solid border border-green-100 rounded-lg shadow-md bg-white pl-4 pr-4 pt-2 pb-2 flex justify-between "
+    id="item-{{ item.id }}">
+    <div>
+
+        <input type="checkbox" class="h-6 w-6 rounded border-green-300 text-green-600
+        accent-green-400 
+        cursor-pointer
+        inline-block align-middle
+        " data-testid="toggle_item_{{ item.id }}" {% if item.completed %} checked {% endif %}
+            hx-put="{% url 'action_toggle_todo' item.id %}" />
+
+        <span class="inline-block align-middle px-2 font-semibold font-normal
+        "> {{ item.title }}</span>
+    </div>
+    <button
+        class="rounded bg-orange-600 px-2 py-1 text-xs font-semibold text-white shadow-sm hover:bg-orange-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-orange-600 inline-block align-middle"
+        data-testid="delete_item_{{ item.id }}" hx-delete="{% url 'action_delete_todo' item.id %}"
+        hx-target="#item-{{ item.id }}" hx-swap="outerHTML">
         Delete
     </button>
 </div>
