--- a/demo/yata/todos/templates/todos/index.html
+++ b/demo/yata/todos/templates/todos/index.html
@@ -11,11 +11,51 @@
         integrity="sha384-0gxUXCCR8yv9FM2b+U3FDbsKthCI66oH5IA9fHppQq9DDMHuMauqq1ZHBpJxQ0J0"
         crossorigin="anonymous"></script>
     <script src="{% static 'todos/utils.js' %}"></script>
+    <script src="//unpkg.com/alpinejs" defer></script>
+
+
 
 </head>
 
 <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
+    <div class="flex items-center justify-between p-6 border-b mb-5">
+        <a href="/" class="text-orange-500 font-bold text-3xl">YATA!</a>
+        <div class="hidden lg:block">
+
+            <nav class="gap-x-4 flex">
+
+                <a href="#"
+                    class="bg-orange-600 hover:bg-orange-700 text-gray-100 font-bold rounded-full pt-1 pb-1 pl-3 pr-3">About</a>
+                <a href="#"
+                    class="bg-orange-600 hover:bg-orange-700 text-gray-100 font-bold rounded-full pt-1 pb-1 pl-3 pr-3">Contact</a>
+                <a href="#"
+                    class="bg-orange-600 hover:bg-orange-700 text-gray-100 font-bold rounded-full pt-1 pb-1 pl-3 pr-3">Whatever</a>
+            </nav>
+        </div>
+
+        <div class="block lg:hidden" x-data="{ open: false }">
+            <button @click="open = ! open"
+                class="bg-orange-600 hover:bg-orange-700 text-gray-100 font-bold rounded-full pt-1 pb-1 pl-3 pr-3">Menu
+                🔽</button>
+
+            <div x-show="open" class="fixed z-10 right-5 bg-white border shadow-lg rounded-lg p-2">
+
+                <nav class="flex flex-col text-left gap-2">
+
+                    <a href="#" class="text-gray-700 font-bold rounded-full pt-1 pb-1 pl-3 pr-3">About</a>
+                    <a href="#" class="text-gray-700 font-bold rounded-full pt-1 pb-1 pl-3 pr-3">Contact</a>
+                    <a href="#" class="text-gray-700 font-bold rounded-full pt-1 pb-1 pl-3 pr-3">Whatever</a>
+                </nav>
+            </div>
+        </div>
+
+    </div>
+
+
     <div class="mx-auto max-w-7xl sm:px-6 lg:px-8 space-y-4 pt-4">
+
+
+
 
         <h1 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight">Things to do
         </h1>
@@ -45,7 +85,7 @@
 
                     {{ form }}
                     <input type="submit" value="Add"
-                        class="rounded bg-green-600 px-2 py-1 text-xs font-semibold text-white shadow-sm hover:bg-green-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-green-600">
+                        class="rounded bg-orange-600 px-2 py-1 text-xs font-semibold text-white shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-orange-600">
                 </form>
             </div>
         </div>
