--- a/demo/yata/todos/templates/todos/partial_todo_item.html
+++ b/demo/yata/todos/templates/todos/partial_todo_item.html
@@ -12,9 +12,7 @@
         <span class="inline-block align-middle px-2 font-semibold font-normal
         "> {{ item.title }}</span>
     </div>
-    <button
-        class="rounded bg-orange-600 px-2 py-1 text-xs font-semibold text-white shadow-sm hover:bg-orange-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-orange-600 inline-block align-middle"
-        data-testid="delete_item_{{ item.id }}" hx-delete="{% url 'action_delete_todo' item.id %}"
+    <button class="button" data-testid="delete_item_{{ item.id }}" hx-delete="{% url 'action_delete_todo' item.id %}"
         hx-target="#item-{{ item.id }}" hx-swap="outerHTML">
         Delete
     </button>
